--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
-pyqt5
-matplotlib
+pyqt5~=5.15.10
+matplotlib~=3.5.1
 protobuf
-pyserial
+pyserial~=3.5
+jsonschema~=4.4.0
+qasync~=0.27.1
+serial~=0.0.97
+scipy~=1.8.0
+aiohttp~=3.9.2
+numpy~=1.26.2
